Time-series ordered insert can set duplicate errors

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-03-31
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We first set the error when staging the inserts and then again set the same error during the unordered individual retry.

      Because we need to fully fall back to the unordered retry path when encountering any staging errors during the ordered insert, we should simply skip setting the error in the ordered path and let the retry (final) path take care of error handling completely.

              Assignee:
              Yuhong Zhang
              Reporter:
              Yuhong Zhang
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: