SERVER-102641 Do not populate staging errors for time-series ordered insert (#33878)

GitOrigin-RevId: d5ee52dfad53560ca55599474b9037a92ad7b3a6